src/test/ui/privacy/union-field-privacy-2.stderr
error[E0616]: field `c` of struct `m::U` is private
  --> $DIR/union-field-privacy-2.rs:14:13
   |
LL |     let c = u.c;
   |             ^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0616`.
